--- a/work.html
+++ b/work.html
@@ -60,11 +60,11 @@
 							collaboration with European space agency),</li>
 						<li style="list-style-type:none">
 							<ul>
-								<li><b>Agriculture and Vegetation:</b> Satellite image derived products to assess the vegetation health, water content and estimate the yield of the agricultural sites. </li>
-								<li><b>Environmental disaster risk: </b> Identify the flood, wildfire, and landside potential areas in Portugal.</li>
-								<li><b>Climate change and renewable energy:</b> Site suitability assessment for identification of solar, wind and hydro power plants.</li>
-								<li><b>Urban planning:</b> Analyse and identify to quantify urbanization and land use change to minimize urban sprawl and spatial planning.</li> 
-								<li><b>Tourism and recreation:</b> Identify tourist hotspots using social media data and identify suitable locations to establish observation points.</li> 
+								<b>Agriculture and Vegetation:</b> Satellite image derived products to assess the vegetation health, water content and estimate the yield of the agricultural sites.
+								<b>Environmental disaster risk: </b> Identify the flood, wildfire, and landside potential areas in Portugal.
+								<b>Climate change and renewable energy:</b> Site suitability assessment for identification of solar, wind and hydro power plants.
+								<b>Urban planning:</b> Analyse and identify to quantify urbanization and land use change to minimize urban sprawl and spatial planning.
+								<b>Tourism and recreation:</b> Identify tourist hotspots using social media data and identify suitable locations to establish observation points. 
 							</ul>
 						</li>
 						<li>Employed Geographic Information Systems (GIS) for the storage, analysis, and visualization of geospatial data in order to derive insights to meet business needs.</li>
