--- a/work.html
+++ b/work.html
@@ -137,22 +137,21 @@
 								</header>
 								<ul>
 									<li><a href="index.html">Homepage</a></li>
+									<li><a href="work.html">Work Experiences</a></li>
 									<li>
-										<span class="opener">Research</span>
+										<span class="opener">Projects</span>
 										<ul>
 										<li><a href="remote.html">Remote Sensing</a></li>
 										<li><a href="gis.html">Geographical information Systems (GIS) </a></li>
-										<li><a href="thesis.html">Master Thesis </a></li>
-										</ul></li>
-								
-									<li><a href="work.html">Work Experiences</a></li>
-									<li><a href="projects.html">Projects</a></li>
+										<li><a href="thesis.html">Machine learning</a></li>
+										<li><a href="projects.html">Surveying </a></li>
+										</ul></li>	
 									
 									<li>
 										<span class="opener">Educational Institutes</span>
 										<ul>
 											<li><a href="https://mastergeotech.info/">Erasmus Mundus joint master program</a></li>
-											<li><a href="http://www.sab.ac.lk/geo/">Sabaragamuwa Univeersity of Sri Lanka</a></li>
+											<li><a href="http://www.sab.ac.lk/geo/">Sabaragamuwa University of Sri Lanka</a></li>
 											<li><a href="https://www.kaiyodai.ac.jp/english/">Tokyo University of Marine science and Technology</a></li>
 											<li><a href="https://www.nysc.lk/">National Youth Services Council</a></li>
 											<li><a href="http://www.visakhav.org/"> Visakha Vidyalaya</a></li>
@@ -173,9 +172,9 @@
 							<li class="icon solid fa-home">57/2 Pathirage Road<br />
 							Gangodawila, Nugegoda, 10250<br />
 							Sri Lanka
-							<li class="icon solid fa-home">R. dos Prazeres, 5, Res-do-chao, DTO<br>
-							Bairro das Maroitas e cachoeiras, Vala de fugueira<br>
-							2695-642, Sao Joao Da Talha, Portugal </li>
+							<li class="icon solid fa-home">Rua 25 de Abril 42- 1 Esq,<br>
+							Olival Basto, <br>
+							2620-041, Lisboa, Portugal </li>
 						</li>
 						</ul>
 					</section>
