add vegetation mapping

--- a/remote.html
+++ b/remote.html
@@ -42,6 +42,27 @@
 
 		<div class="posts">
 			<article>
+				<video width="320" height="240" controls>
+					<source src="video/VegetationStatus.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				  </video>
+				<h3>Vegetation status mapping</h3>		
+				<p style="text-align:justify">Mapping vegetation status via remote sensing indices has emerged as a vital tool in environmental monitoring,
+					 offering crucial insights and precautionary measures. This script was designed to map the vegetation status in the Municipality of Selmes( The script allows 
+					 users to easily customize the study area by assigning the municipality name as a variable),a well known agricultural site in Portugal.
+					The indices utilized in this mapping include,
+					* NDVI, EVI, and kNDVI for assessing vegetation greenness and vigor. 
+					* Leaf Area Index (LAI) aids in estimating vegetated area yields, 
+					* Canopy Chlorophyll Content Index (CCCI) assesses canopy nitrogen content. 
+					* The Normalized Difference Moisture Index (NDMI) evaluate vegetation water/moisture content, 
+					* Canopy Fire Potential Index estimates vegetation canopy susceptibility to fire under specific conditions.
+					This script harnesses the Geemap library and Google Earth Engine's Python module to calculate these indices and visualize outputs interactively.</p>
+				<ul class="actions">
+					<li><a href="pdf/ESTIMATING THE FOREST CANOPY LOSS USING SENTINEL1 C BAND SAR IMAGES.pdf" class="button">More</a></li>
+				</ul>
+			</article>
+
+			<article>
 				<a href="#" class="image"><img src="images/remote/sar/Slide8.PNG" alt="" /></a>
 				<h3>Estimating the forest canopy loss using sentinel-1 C band SAR images</h3>		
 				<p style="text-align:justify">In this research, the main objective was to detect 
