--- a/remote.html
+++ b/remote.html
@@ -57,8 +57,11 @@
 					* The Normalized Difference Moisture Index (NDMI) evaluate vegetation water/moisture content, 
 					* Canopy Fire Potential Index estimates vegetation canopy susceptibility to fire under specific conditions.
 					This script harnesses the Geemap library and Google Earth Engine's Python module to calculate these indices and visualize outputs interactively.</p>
+
+					Access the script here,
+					
 				<ul class="actions">
-					<li><a href="pdf/ESTIMATING THE FOREST CANOPY LOSS USING SENTINEL1 C BAND SAR IMAGES.pdf" class="button">More</a></li>
+					<li><a href="https://github.com/PrasadiSenadeera/VegetationStatusMapping/blob/main/VegetationStatus.ipynb" class="button">More</a></li>
 				</ul>
 			</article>
 
