--- a/remote.html
+++ b/remote.html
@@ -42,7 +42,7 @@
 
 		<div class="posts">
 			<article>
-				<video width="320" height="240" controls>
+				<video controls>
 					<source src="video/VegetationStatus.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				  </video>
