update video size

--- a/remote.html
+++ b/remote.html
@@ -42,24 +42,22 @@
 
 		<div class="posts">
 			<article>
-				<video controls>
+				<video controls style="max-width: 100%;">
 					<source src="video/VegetationStatus.mp4" type="video/mp4">
-					Your browser does not support the video tag.
-				  </video>
+					Your browser does not support the video tag. </video>
 				<h3>Vegetation status mapping</h3>		
 				<p style="text-align:justify">Mapping vegetation status via remote sensing indices has emerged as a vital tool in environmental monitoring,
 					 offering crucial insights and precautionary measures. This script was designed to map the vegetation status in the Municipality of Selmes( The script allows 
 					 users to easily customize the study area by assigning the municipality name as a variable),a well known agricultural site in Portugal.
 					The indices utilized in this mapping include,
-					* NDVI, EVI, and kNDVI for assessing vegetation greenness and vigor. 
-					* Leaf Area Index (LAI) aids in estimating vegetated area yields, 
-					* Canopy Chlorophyll Content Index (CCCI) assesses canopy nitrogen content. 
-					* The Normalized Difference Moisture Index (NDMI) evaluate vegetation water/moisture content, 
-					* Canopy Fire Potential Index estimates vegetation canopy susceptibility to fire under specific conditions.
-					This script harnesses the Geemap library and Google Earth Engine's Python module to calculate these indices and visualize outputs interactively.</p>
-
+					<ol>
+						<li>NDVI, EVI, and kNDVI for assessing vegetation greenness and vigor.</li>
+						<li>Leaf Area Index (LAI) aids in estimating vegetated area yields.</li>
+						<li>Canopy Chlorophyll Content Index (CCCI) assesses canopy nitrogen content.</li>
+						<li>The Normalized Difference Moisture Index (NDMI) evaluates vegetation water/moisture content.</li>
+						<li>Canopy Fire Potential Index estimates vegetation canopy susceptibility to fire under specific conditions.</li>
+					</ol></p>
 					Access the script here,
-					
 				<ul class="actions">
 					<li><a href="https://github.com/PrasadiSenadeera/VegetationStatusMapping/blob/main/VegetationStatus.ipynb" class="button">More</a></li>
 				</ul>
