--- a/index.html
+++ b/index.html
@@ -202,12 +202,11 @@
 
 				
 			<h3><li>GHC 2020 Student Scholar</li></h3>
-				<p style="text-align:justify">	Grace Hopper Celebration (GHC) is the world’s largest gathering of women technologists to bring the 
-					research and career interests of women in computing to the forefront. The celebration is organized by the <a href="https://en.wikipedia.org/wiki/AnitaB.org">AnitB.org</a> 
-					Institute for Women and Technology and is held annually in the United States with participants from all over the world. 
-					In 2020, I was selected as a full scholar to attend the conference, but unfortunately, the conference was held virtually
-					 due to the current health crisis.										
-				</p>
+				<p style="text-align:justify">	The Grace Hopper Celebration (GHC) stands as the world's largest assembly of women technologists, dedicated 
+					to spotlighting the research and career pursuits of women in computing. This celebration is meticulously organized by the [AnitaB.org]
+					(https://en.wikipedia.org/wiki/AnitaB.org) Institute for Women and Technology and takes place annually in the United States, attracting
+					 participants from across the globe. In the year 2020, I had the honor of being chosen as a full scholar to attend the conference. However,
+					  regrettably, the event transitioned to a virtual format due to the prevailing health crisis at that time.</p>
 			
 				
 			<h3><li>Sakura science scholar</li></h3>
