--- a/remote.html
+++ b/remote.html
@@ -42,7 +42,7 @@
 
 		<div class="posts">
 			<article>
-				<video controls style="max-width: 100%;">
+				<video width="420" height="340" controls>
 					<source src="video/VegetationStatus.mp4" type="video/mp4">
 					Your browser does not support the video tag. </video>
 				<h3>Vegetation status mapping</h3>		
