--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@
 		</header>
 
 		<div class="main">
-		<ol><h3><li>Data Analyst Engineer,<a href="https://portugal.cleanwatts.energy/?campaign_source=f4e165e4-1c60-ed11-9561-6045bd8f91d8&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfG8Ougne0QoMcDDlL7_K-dtHqkjnv2kslDn8v1S6EIT09eLPedyp-saAq9MEALw_wcB"> Cleanwatts Digital S.A.</a>, Coimbra,Portugal.             [03.01.2023 - Present]</li></h3>
+		<ol><h3><li>Data Analyst Engineer,<a href="https://portugal.cleanwatts.energy/?campaign_source=f4e165e4-1c60-ed11-9561-6045bd8f91d8&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfG8Ougne0QoMcDDlL7_K-dtHqkjnv2kslDn8v1S6EIT09eLPedyp-saAq9MEALw_wcB"> Cleanwatts Digital S.A.</a>, Coimbra,Portugal.             [03.01.2023 - 22.06.2023]</li></h3>
 		<p style="text-align:justify"> Duties and Responsibilities,
 				<ul>
 					<li>Providing geospatial solutions to identify optimal locations and hot spots for renewable energy sites. </li>
@@ -56,23 +56,23 @@
 					prototyping services in the fields of Geospatial Intelligence to promote the sustainability of our planet. In starupplo I worked as a 
 					Geospatial analyst to 
 					<ul>
-						<li>Develop sustainable solutions to address the global issues of public concern to improve life on Earth (Research based projects in 
-							collaboration with European space agency),</li>
-						<li style="list-style-type:none">
+						<li>Develop sustainable solutions to address global issues of public concern to improve life on Earth (Research-based projects in collaboration with the European Space Agency),</li>
+						<li>
 							<ul>
-								<b>Agriculture and Vegetation:</b> Satellite image derived products to assess the vegetation health, water content and estimate the yield of the agricultural sites.
-								<b>Environmental disaster risk: </b> Identify the flood, wildfire, and landside potential areas in Portugal.
-								<b>Climate change and renewable energy:</b> Site suitability assessment for identification of solar, wind and hydro power plants.
-								<b>Urban planning:</b> Analyse and identify to quantify urbanization and land use change to minimize urban sprawl and spatial planning.
-								<b>Tourism and recreation:</b> Identify tourist hotspots using social media data and identify suitable locations to establish observation points. 
+								<li><b>Agriculture and Vegetation:</b> Satellite image-derived products to assess vegetation health, water content, and estimate the yield of agricultural sites.</li>
+								<li><b>Environmental disaster risk:</b> Identify flood, wildfire, and landslide potential areas in Portugal.</li>
+								<li><b>Climate change and renewable energy:</b> Site suitability assessment for identifying solar, wind, and hydro power plants.</li>
+								<li><b>Urban planning:</b> Analyze and identify to quantify urbanization and land use change to minimize urban sprawl and spatial planning.</li>
+								<li><b>Tourism and recreation:</b> Identify tourist hotspots using social media data and identify suitable locations to establish observation points.</li>
 							</ul>
 						</li>
-						<li>Employed Geographic Information Systems (GIS) for the storage, analysis, and visualization of geospatial data in order to derive insights to meet business needs.</li>
-						<li>Automate the project methodologies (Python) and calculations developed with Microsoft Excel to enable automatic updates of the project results.</li>
+						<li>Employ Geographic Information Systems (GIS) for the storage, analysis, and visualization of geospatial data to derive insights to meet business needs.</li>
+						<li>Automate project methodologies (Python) and calculations developed with Microsoft Excel to enable automatic updates of project results.</li>
 						<li>Create web-based statistical dashboards for statistical data visualization.</li>
-						<li>Develop CNN-based Machine learning models for feature identification, extraction and classification.</li>
-						<li>Establishing a comprehensive geo data collection and storage system to ensure easy access to data within the company.</li>
+						<li>Develop Convolutional Neural Network (CNN)-based machine learning models for feature identification, extraction, and classification.</li>
+						<li>Establish a comprehensive geo data collection and storage system to ensure easy access to data within the company.</li>
 					</ul>
+					
 		</p>
 
 		<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka.             [04.12.2017-01.09.2019] </a></li></h3>
