--- a/remote.html
+++ b/remote.html
@@ -42,8 +42,8 @@
 
 		<div class="posts">
 			<article>
-				<video width="420" height="340" controls>
-					<source src="video/VegetationStatus.mp4" type="video/mp4">
+				<video  width="400" height="270"  controls>
+				</video><source src="video/VegetationStatus.mp4" type="video/mp4">
 					Your browser does not support the video tag. </video>
 				<h3>Vegetation status mapping</h3>		
 				<p style="text-align:justify">Mapping vegetation status via remote sensing indices has emerged as a vital tool in environmental monitoring,
