--- a/remote.html
+++ b/remote.html
@@ -44,8 +44,7 @@
 			<article>
 				<h3>Vegetation status mapping</h3>	
 				<video  width="400" height="270"  controls>
-				</video><source src="video/VegetationStatus.mp4" type="video/mp4">
-					Your browser does not support the video tag. </video>	
+				<source src="video/VegetationStatus.mp4" type="video/mp4"> </video>	
 				<p style="text-align:justify">Mapping vegetation status via remote sensing indices has emerged as a vital tool in environmental monitoring,
 					 offering crucial insights and precautionary measures. This script was designed to map the vegetation status in the Municipality of Selmes( The script allows 
 					 users to easily customize the study area by assigning the municipality name as a variable),a well known agricultural site in Portugal.
