--- a/thesis.html
+++ b/thesis.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
+		</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -40,15 +40,29 @@
 	<div class="main">
 		<header class="main">
 		<span class="image left"><img src="images/Logos.jpg" /></span> 
-		<p style="font-size:45px;"> AUTOMATION OF ROAD FEATURE EXTRACTION FROM HIGH RESOLUTION IMAGES</p>
-		<h3 style="text-align:justify"> Supervisors: Prof. Dr. Mauro Castelli, Ph.D., Prof. Dr. Filiberto Pla, Ph.D., Mr. Nuno Alpalhão, MSc.</h3>
+		<p style="font-size:25px;"> AUTOMATION OF ROAD FEATURE EXTRACTION FROM HIGH RESOLUTION IMAGES</p>
+		<p style="font-size:15px;"> Supervisors: Prof. Dr. Mauro Castelli, Ph.D., Prof. Dr. Filiberto Pla, Ph.D., Mr. Nuno Alpalhão, MSc.</p>
 		</header>
-		<!--<p style="text-align:center"><iframe src="https://onedrive.live.com/embed?cid=B0E3A4000592D98C&amp;resid=B0E3A4000592D98C%211099&amp;authkey=AGw29JyuJ4y2YEw&amp;em=2&amp;wdAr=1.7777777777777777" width="962px" height="565px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
-		</p> -->
-		<p style="text-align:center"><iframe src="https://onedrive.live.com/embed?cid=B0E3A4000592D98C&amp;resid=B0E3A4000592D98C%211099&amp;authkey=AGw29JyuJ4y2YEw&amp;em=2&amp;wdAr=1.7777777777777777" width="1186px" height="691px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
-		</p>
+		
+		<div class="row">
+			<div class="col-3 col-12-medium">
+				<h4>Source Image</h4>
+				<span class="image fit"><img src="images/thesis/original.png" alt="" /></span>
+			</div>
+			<div class="col-3 col-12-medium">
+				<h4>Reference Image</h4>
+				<span class="image fit"><img src="images/thesis/truth.png" alt="" /></span>
+			</div>
+			<div class="col-3 col-12-medium">
+				<h4>Model Output</h4>
+				<span class="image fit"><img src="images/thesis/out.png" alt="" /></span>
+			</div>
+			<div class="col-3 col-12-medium">
+				<h4>Post-Processed Output</h4>
+				<span class="image fit"><img src="images/thesis/post.png" alt="" /></span>
+			</div>
+		</div>
 
-		<br>
 		<p style="text-align:justify">The detection of road features from remotely 
 			sensed images has become a critical factor in maintaining a reliable and updated road network in a country to provide a base reference 
 			for transportation, emergency planning, and navigation. With the recent advances of convolutional neural networks in image processing, 
@@ -65,10 +79,30 @@
 			terms of performance measure and network complexity. <br>
 			If you're curious about this study, please visit my Github page to access the code developed and view the full documentation 
 			<a href= "https://github.com/PrasadiSenadeera/Road_Extraction-/blob/main/Automation%20of%20road%20feature%20extractoion%20from%20high%20resolution%20images.pdf"> here</a>
-		</p>		  
+		</p>
+		<!--<p style="text-align:center"><iframe src="https://onedrive.live.com/embed?cid=B0E3A4000592D98C&amp;resid=B0E3A4000592D98C%211099&amp;authkey=AGw29JyuJ4y2YEw&amp;em=2&amp;wdAr=1.7777777777777777" width="962px" height="565px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+		</p> 
+		<p style="text-align:center"><iframe src="https://onedrive.live.com/embed?cid=B0E3A4000592D98C&amp;resid=B0E3A4000592D98C%211099&amp;authkey=AGw29JyuJ4y2YEw&amp;em=2&amp;wdAr=1.7777777777777777" width="1186px" height="691px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+		</p>-->	  
 
-
+		<div class="row">
+			<div class="col-6 col-12-small">
+				<h4>Training Deep Learning Model</h4>
+				<video width="640" height="360" controls>
+					<source src="video/Training.mp4" type="video/mp4">Your browser does not support the video tag.
+				</video>
+			</div>
+			<div class="col-6 col-12-small">
+				<h4>Testing Deep Learning Model</h4>
+				<video width="640" height="360" controls>
+					<source src="video/Testing.mp4" type="video/mp4">Your browser does not support the video tag.
+				</video>
+			</div>
 		</div>
+		
+
+		
+	</div>
 
 	</section>		
 	</div>
