--- a/work.html
+++ b/work.html
@@ -34,14 +34,14 @@
 		</ul>
 	</header>
 
-							<!-- Content -->
+	<!-- Content -->
 
 	<section>
 		<header class="main">
 		</header>
 
 		<div class="main">
-		<ol><h3><li>Data Analyst Engineer,<a href="https://portugal.cleanwatts.energy/?campaign_source=f4e165e4-1c60-ed11-9561-6045bd8f91d8&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfG8Ougne0QoMcDDlL7_K-dtHqkjnv2kslDn8v1S6EIT09eLPedyp-saAq9MEALw_wcB"> Cleanwatts Digital S.A.</a>, Coimbra,Portugal.             [03.01.2023 - 22.06.2023]</li></h3>
+		<h3>Data Analyst Engineer,<a href="https://portugal.cleanwatts.energy/?campaign_source=f4e165e4-1c60-ed11-9561-6045bd8f91d8&gclid=Cj0KCQiAgaGgBhC8ARIsAAAyLfG8Ougne0QoMcDDlL7_K-dtHqkjnv2kslDn8v1S6EIT09eLPedyp-saAq9MEALw_wcB"> Cleanwatts Digital S.A.</a>, Coimbra,Portugal.             [03.01.2023 - 22.06.2023]</h3>
 		<p style="text-align:justify"> Duties and Responsibilities,
 				<ul>
 					<li>Providing geospatial solutions to identify optimal locations and hot spots for renewable energy sites. </li>
@@ -51,13 +51,11 @@
 				</ul>
 		</p>		
 
-		<h3><li>Geospatial Analyst,,<a href="https://staruplo.com/"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - 31.10.2022]</li></h3>
+		<h3>Geospatial Analyst,<a href="https://staruplo.com/"> Staruplo</a>, SANJOTEC – Parque de Ciência e Tecnologia,Portugal.             [01.03.2021 - 31.10.2022]</h3>
 		<p style="text-align:justify"> Staruplo is a Portuguese company based in Sao Joa de Madeira that provides artificial intelligence solutions and 
 					prototyping services in the fields of Geospatial Intelligence to promote the sustainability of our planet. In starupplo I worked as a 
 					Geospatial analyst to 
-					<ul>
-						<li>Develop sustainable solutions to address global issues of public concern to improve life on Earth (Research-based projects in collaboration with the European Space Agency),</li>
-						<li>
+					<ul><li>Develop sustainable solutions to address global issues of public concern to improve life on Earth (Research-based projects in collaboration with the European Space Agency),</li>
 							<ul>
 								<li><b>Agriculture and Vegetation:</b> Satellite image-derived products to assess vegetation health, water content, and estimate the yield of agricultural sites.</li>
 								<li><b>Environmental disaster risk:</b> Identify flood, wildfire, and landslide potential areas in Portugal.</li>
@@ -65,7 +63,6 @@
 								<li><b>Urban planning:</b> Analyze and identify to quantify urbanization and land use change to minimize urban sprawl and spatial planning.</li>
 								<li><b>Tourism and recreation:</b> Identify tourist hotspots using social media data and identify suitable locations to establish observation points.</li>
 							</ul>
-						</li>
 						<li>Employ Geographic Information Systems (GIS) for the storage, analysis, and visualization of geospatial data to derive insights to meet business needs.</li>
 						<li>Automate project methodologies (Python) and calculations developed with Microsoft Excel to enable automatic updates of project results.</li>
 						<li>Create web-based statistical dashboards for statistical data visualization.</li>
@@ -75,7 +72,7 @@
 					
 		</p>
 
-		<h3><li>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka.             [04.12.2017-01.09.2019] </a></li></h3>
+		<h3>Assistant Lecturer, <a href="http://www.sab.ac.lk/geo/"> Faculty of Geomatics, Sabaragamuwa University of Sri Lanka.             [04.12.2017-01.09.2019] </a></h3>
 
 		<p style="text-align:justify"> The Sabaragamuwa University of Sri Lanka (SUSL)  is a public university in Belihuloya, Balangoda, Sri Lanka. 
 			It was founded on 20 November 1991 and consists of eight faculties including the Faculty of Geomatics which is one of the two institutes
@@ -93,7 +90,7 @@
 	
 
 		
-		<h3><li>Research assistant,<a href="http://geoinfo.ait.ac.th/"> Geo informatics Centre</a>, <a href="https://www.ait.ac.th/Asian"> Asian institute of Technology</a>, Thailand              [01.06.2017-01.09.2017]</li></h3>
+		<h3>Research assistant,<a href="http://geoinfo.ait.ac.th/"> Geo informatics Centre</a>, <a href="https://www.ait.ac.th/Asian"> Asian institute of Technology</a>, Thailand              [01.06.2017-01.09.2017]</h3>
 		
 		<p style="text-align:justify"> The Geoinformatics Center (GIC) is a leading Remote sensing and GIS organization in Southeast Asia. That is oriented towards 
 			the implementation of projects in connection with GIS and Remote sensing. Every year the Geospatial center invites university students with a background 
@@ -116,9 +113,6 @@
 
 				</p>
 
-
-
-	</ol>
 			
 		</div>		
 		</section>
