--- a/thesis.html
+++ b/thesis.html
@@ -87,13 +87,13 @@
 
 		<div class="row">
 			<div class="col-6 col-12-small">
-				<h4>Training Deep Learning Model</h4>
+				<h4>Model Learning</h4>
 				<video width="640" height="360" controls>
 					<source src="video/Training.mp4" type="video/mp4">Your browser does not support the video tag.
 				</video>
 			</div>
 			<div class="col-6 col-12-small">
-				<h4>Testing Deep Learning Model</h4>
+				<h4>Model Testing</h4>
 				<video width="640" height="360" controls>
 					<source src="video/Testing.mp4" type="video/mp4">Your browser does not support the video tag.
 				</video>
