--- a/remote.html
+++ b/remote.html
@@ -36,26 +36,28 @@
 
 					<!-- Content -->
 						<section>
-								<div class="content">		
-									<h2>Vegetation status mapping</h2>
-									<p style="text-align:justify">Mapping vegetation status via remote sensing indices has emerged as a vital tool in environmental monitoring,
-										offering crucial insights and precautionary measures. This script was designed to map the vegetation status in the Municipality of Selmes (The script allows 
-										users to easily customize the study area by assigning the municipality name as a variable),a well known agricultural site in Portugal.
-										The indices utilized in this mapping include,
-										<ol>
-											<li>NDVI, EVI, and kNDVI for assessing vegetation greenness and vigor.</li>
-											<li>Leaf Area Index (LAI) aids in estimating vegetated area yields.</li>
-											<li>Canopy Chlorophyll Content Index (CCCI) assesses canopy nitrogen content.</li>
-											<li>The Normalized Difference Moisture Index (NDMI) evaluates vegetation water/moisture content.</li>
-											<li>Canopy Fire Potential Index estimates vegetation canopy susceptibility to fire under specific conditions.</li>
-										</ol></p>
-									<ul class="actions"><li><a href="https://github.com/PrasadiSenadeera/VegetationStatusMapping/blob/main/VegetationStatus.ipynb" class="button">Script</a></li></ul>
-								</div>
-								<span class="image object">
+							<h2>Vegetation status mapping</h2>
+								<div class="row">
+									<div class="col-6 col-12-small">		
+										<p style="text-align:justify">Mapping vegetation status via remote sensing indices has emerged as a vital tool in environmental monitoring,
+											offering crucial insights and precautionary measures. This script was designed to map the vegetation status in the Municipality of Selmes (The script allows 
+											users to easily customize the study area by assigning the municipality name as a variable),a well known agricultural site in Portugal.
+											The indices utilized in this mapping include,
+											<ol>
+												<li>NDVI, EVI, and kNDVI for assessing vegetation greenness and vigor.</li>
+												<li>Leaf Area Index (LAI) aids in estimating vegetated area yields.</li>
+												<li>Canopy Chlorophyll Content Index (CCCI) assesses canopy nitrogen content.</li>
+												<li>The Normalized Difference Moisture Index (NDMI) evaluates vegetation water/moisture content.</li>
+												<li>Canopy Fire Potential Index estimates vegetation canopy susceptibility to fire under specific conditions.</li>
+											</ol></p>
+										<ul class="actions"><li><a href="https://github.com/PrasadiSenadeera/VegetationStatusMapping/blob/main/VegetationStatus.ipynb" class="button">Script</a></li></ul>
+									</div>
+									<div class="col-6 col-12-small">
 									<video width="640" height="360" controls>
 										<source src="video/VegetationStatus.mp4" type="video/mp4">Your browser does not support the video tag.
 									</video>
-								</span>							
+									</div>
+								</div>							
 								
 							
 								<br><br>
