--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
 	</div>
 
 
-	<!-- Sidebar -->
+	<<!-- Sidebar -->
 	<div id="sidebar">
 		<div class="inner">
 
@@ -131,9 +131,9 @@
 				<li class="icon solid fa-home">57/2 Pathirage Road<br />
 				Gangodawila, Nugegoda, 10250<br />
 				Sri Lanka
-				<li class="icon solid fa-home">Rua 25 de Abril 42- 1 Esq,<br>
-				Olival Basto, <br>
-				2620-041, Lisboa, Portugal </li>
+				<li class="icon solid fa-home">Gareten Straße 9,<br>
+				37213, Witzenhausen,<br>
+				Germany </li>
 			</li>
 			</ul>
 		</section>
