--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 				<li class="icon solid fa-home">57/2 Pathirage Road<br />
 				Gangodawila, Nugegoda, 10250<br />
 				Sri Lanka
-				<li class="icon solid fa-home">Gareten Straße 9,<br>
+				<li class="icon solid fa-home">Garten Straße 9,<br>
 				37213, Witzenhausen,<br>
 				Germany </li>
 			</li>
